@@ -1,6 +1,7 @@
 VERSION 2.2 - unreleased
 ========================
-2005-02 - print module: 
+2005-03 - print module: 
+           - 2005-03: added --binary option
            - 2005-02: added -f option for file output
            - 2005-01: --boulder (Boulder output format) added
            - 2004-12: '*' removed; specifying no fields now prints all fields
